--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DB_URI=mongodb+srv://<username>:<password>@cluster.yourmongodb.com/mydatabase
+DB_URI=mongodb+srv://dbUserGonzales:dbUserPasswordGonzoBros@blueprintcluster.oq6vptn.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=your_secret_key
