Hopefully this simultaneously starts server when blueprint is running aswell

--- a/blueprint/package.json
+++ b/blueprint/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "cd ../server && npm start",
+    "dev": "concurrently \"npm start\" \"npm run start-server\""
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +47,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  }
 }
