--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DB_URI=mongodb+srv://dbUserGonzales:dbUserPasswordGonzoBros@blueprintcluster.oq6vptn.mongodb.net/blueprint_db?retryWrites=true&w=majority
+DB_URI=mongodb+srv://dbUserGonzales:dbUserPasswordGonzoBros@blueprintcluster.oq6vptn.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=your_secret_key
 PORT=5000
