--- a/blueprint/package.json
+++ b/blueprint/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "node-fetch": "^3.3.2",
