--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "concurrently": "^8.2.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.2",
         "express": "^4.18.2",
