--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-server": "cd ../server && npm start",
-    "dev": "concurrently \"npm start\" \"npm run start-server\""
+    "dev": "concurrently \"npm start\" \"cd ../server && npm start\""
   },
   "eslintConfig": {
     "extends": [
