--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.3.0",
-        "mongoose": "^8.1.2"
+        "mongoose": "^8.1.2",
+        "node-fetch": "^2.7.0"
     }
 }
