--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.1.2",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
