--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.2",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0",
         "mongodb": "^6.3.0",
         "mongoose": "^8.1.2",
         "node-fetch": "^2.7.0"
