--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.7",
         "bcryptjs": "^2.4.3",
         "concurrently": "^8.2.2",
         "cors": "^2.8.5",
