--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^1.6.7",
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^2.0.3",
         "concurrently": "^8.2.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.2",
