--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "jwt-decode": "^4.0.0",
         "mongodb": "^6.3.0",
         "mongoose": "^8.1.2",
+        "multer": "^1.4.5-lts.1",
         "node-fetch": "^2.7.0"
     }
 }
